Task2/SExpressionParser.java
// Generated from SExpressionParser.g4 by ANTLR 4.13.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings(
        {"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SExpressionParser extends Parser {
    public static final int
            SYMBOL = 1, LEFT_PAREN = 2, RIGHT_PAREN = 3, LEFT_CURLY = 4,
            RIGHT_CURLY = 5, LEFT_BRACKET = 6,
            RIGHT_BRACKET = 7, WS = 8;
    public static final int
            RULE_sexpression = 0, RULE_head = 1, RULE_rest = 2;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY =
            new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public SExpressionParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
                _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "sexpression", "head", "rest"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, "'('", "')'", "'{'", "'}'", "'['", "']'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "SYMBOL", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_CURLY",
                "RIGHT_CURLY",
                "LEFT_BRACKET", "RIGHT_BRACKET", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SExpressionParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final SexpressionContext sexpression() throws RecognitionException {
        SexpressionContext _localctx =
                new SexpressionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_sexpression);
        int _la;
        try {
            setState(36);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LEFT_PAREN:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(6);
                    match(LEFT_PAREN);
                    setState(7);
                    head();
                    setState(11);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 86L) != 0)) {
                        {
                            {
                                setState(8);
                                rest();
                            }
                        }
                        setState(13);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(14);
                    match(RIGHT_PAREN);
                }
                break;
                case LEFT_BRACKET:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(16);
                    match(LEFT_BRACKET);
                    setState(17);
                    head();
                    setState(21);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 86L) != 0)) {
                        {
                            {
                                setState(18);
                                rest();
                            }
                        }
                        setState(23);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(24);
                    match(RIGHT_BRACKET);
                }
                break;
                case LEFT_CURLY:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(26);
                    match(LEFT_CURLY);
                    setState(27);
                    head();
                    setState(31);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 86L) != 0)) {
                        {
                            {
                                setState(28);
                                rest();
                            }
                        }
                        setState(33);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(34);
                    match(RIGHT_CURLY);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final HeadContext head() throws RecognitionException {
        HeadContext _localctx = new HeadContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_head);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(38);
                match(SYMBOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final RestContext rest() throws RecognitionException {
        RestContext _localctx = new RestContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_rest);
        try {
            setState(42);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case SYMBOL:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(40);
                    match(SYMBOL);
                }
                break;
                case LEFT_PAREN:
                case LEFT_CURLY:
                case LEFT_BRACKET:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(41);
                    sexpression();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SexpressionContext extends ParserRuleContext {
        public SexpressionContext(ParserRuleContext parent,
                                  int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode LEFT_PAREN() {
            return getToken(SExpressionParser.LEFT_PAREN, 0);
        }

        public HeadContext head() {
            return getRuleContext(HeadContext.class, 0);
        }

        public TerminalNode RIGHT_PAREN() {
            return getToken(SExpressionParser.RIGHT_PAREN, 0);
        }

        public List<RestContext> rest() {
            return getRuleContexts(RestContext.class);
        }

        public RestContext rest(int i) {
            return getRuleContext(RestContext.class, i);
        }

        public TerminalNode LEFT_BRACKET() {
            return getToken(SExpressionParser.LEFT_BRACKET, 0);
        }

        public TerminalNode RIGHT_BRACKET() {
            return getToken(SExpressionParser.RIGHT_BRACKET, 0);
        }

        public TerminalNode LEFT_CURLY() {
            return getToken(SExpressionParser.LEFT_CURLY, 0);
        }

        public TerminalNode RIGHT_CURLY() {
            return getToken(SExpressionParser.RIGHT_CURLY, 0);
        }

        @Override public int getRuleIndex() {
            return RULE_sexpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).enterSexpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).exitSexpression(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class HeadContext extends ParserRuleContext {
        public HeadContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode SYMBOL() {
            return getToken(SExpressionParser.SYMBOL, 0);
        }

        @Override public int getRuleIndex() {
            return RULE_head;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).enterHead(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).exitHead(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RestContext extends ParserRuleContext {
        public RestContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode SYMBOL() {
            return getToken(SExpressionParser.SYMBOL, 0);
        }

        public SexpressionContext sexpression() {
            return getRuleContext(SexpressionContext.class, 0);
        }

        @Override public int getRuleIndex() {
            return RULE_rest;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).enterRest(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SExpressionParserListener)
                ((SExpressionParserListener) listener).exitRest(this);
        }
    }
}